--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "axios": "^1.2.0",
     "core-js": "^3.8.3",
     "https-browserify": "^1.0.0",
+    "primeflex": "^3.3.0",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.21.0",
     "vue": "^3.2.13",
-    "vue-axios": "^3.5.2"
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -21,7 +25,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.56.1",
+    "sass-loader": "^10.4.1"
   },
   "eslintConfig": {
     "root": true,
